# recommendation-engine

./: build_vector_database.ipynb  firebase_uploader.ipynb  prompt_engineering.ipynb  pyproject.toml  recommendation_engine_training.ipynb
api/: development_code.py
api/agents/: agent_protocol.py  guard_agent.py  utils.py
